<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="24dp">
        <RelativeLayout
            android:id="@+id/main_ranNumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_text1"
                    android:textSize="23sp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_text2"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:src="@drawable/random"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/main_constellationMake"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_text3"
                    android:textSize="23sp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_text4"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_alignParentEnd="true">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/constellation"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/main_nameNumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_text5"
                    android:textSize="23sp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_text6"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_alignParentEnd="true">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/name"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>
